--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -6,9 +6,10 @@
       <!-- Logo/Brand -->
       <div class="flex items-center">
         <button (click)="goHome()" [class]="isDarkMode 
-          ? 'text-xl font-bold text-white hover:text-gray-300 transition-all' 
-          : 'text-xl font-bold text-orange-900 hover:text-orange-700 transition-all'">
-          <i class="fas fa-home mr-2"></i>Talent Acquisition System
+          ? 'flex items-center text-xl font-bold text-white hover:text-gray-300 transition-all cursor-pointer' 
+          : 'flex items-center text-xl font-bold text-orange-900 hover:text-orange-700 transition-all cursor-pointer'">
+          <img src="TAS.png" alt="TAS Logo" class="w-30 h-30 mr-4">
+          Talent Acquisition System
         </button>
       </div>
 
